@@ -11,25 +11,29 @@
 .Ar search_term
 .Sh DESCRIPTION
 .Nm
-searches for files by name on HFS+ and APFS volumes. Searching takes place
-at the driver level using the file system catalog via the low-level
-searchfs() function. This means the volume's entire directory tree can
-be scanned much faster than with a standard recursive directory search
-using e.g. find.
+searches for files by name on HFS+ and APFS volumes. Searching takes place at 
+the driver level using the file system catalog via the low-level searchfs() 
+kernel call. This means the volume's entire directory tree can be scanned much 
+faster than with a standard recursive directory search using /usr/bin/find.
 .Pp
-Paths of files and directories with names containing the search term are
-printed to STDOUT, one path per line. Search is case-insensitive by default
+The paths to all files and directories with names matching the search term are
+printed to the standard output, one path per line. Search is case-insensitive by
+default.
 .Pp
 The following flags are supported:
 .Bl -tag -width -indent
+.It Fl l, -list
+List all mounted filesystems that support catalog search.
 .It Fl v, -volume Ar path
-Specify volume to search (by mount point). Default is the root file system at /.
+Specify volume to search, either by mount path (e.g. "/Volumes/SomeVol") or
+device name (e.g. "/dev/disk2s1"). Default is the root file system
+mounted at /.
 .It Fl d, -dirs-only
-Return only matching directories.
+Match directories only.
 .It Fl f, -files-only
-Return only matching files.
+Match files only.
 .It Fl e, -exact-match
-Return only exact filename matches.
+Exact filename matches only.
 .It Fl s, -case-sensitive
 Case sensitive matching.
 .It Fl p, -skip-packages
@@ -43,9 +47,9 @@ Finder attribute "Invisible" set) or any objects within invisible directories.
 Don't match any file system objects that are within an "inappropriate" directory.
 Apple's current list of inappropriate directories contains one item: /System.
 .It Fl n, -negate-params
-List all file system objects that do *not* match the search criteria.
-.It Fl l, --limit Ar number
-Exit when a certain number of matching items have been found.
+Show all file system objects that do *not* match the search criteria.
+.It Fl m, -limit Ar number
+Terminate when the specified number of matching items has been found.
 .It Fl o, -version
 Print program version and exit.
 .It Fl h, -help
@@ -59,6 +63,18 @@ Find directories with name matching 'something' on root volume:
 Find file with the exact name 'file.txt' on volume 'SomeHD':
 .Pp
 .Dl searchfs -v "/Volumes/SomeHD" -e "file.txt"
+.Pp
+The regular expression characters ^ and $ can be used to match only the
+beginning or only the end of a string, thusly:
+
+Find all filenames ending with suffix '.txt':
+.Pp
+.Dl searchfs '.txt$'
+.Pp
+Find all filenames starting with "CHANGES":
+.Pp
+.Dl searchfs "^CHANGES"
+.Pp
 .Sh SEE ALSO
 .Xr find 1 ,
 .Xr locate 1 ,
