@@ -74,11 +74,11 @@
 			children = (
 				F481835522727BC9002738AE /* Makefile */,
 				F483552520C586EF006A6EC2 /* README.md */,
+				F442A0502284E05F0082840B /* searchfs.png */,
 				F481835222726F12002738AE /* CHANGES.txt */,
 				F483552620C586EF006A6EC2 /* LICENSE.txt */,
-				F442A0502284E05F0082840B /* searchfs.png */,
-				F442A04F2284DCBE0082840B /* man */,
 				F483552720C586FB006A6EC2 /* main.m */,
+				F442A04F2284DCBE0082840B /* man */,
 				F483552020C57C54006A6EC2 /* Frameworks */,
 				F4D2B39720C32F8400CD7371 /* Products */,
 			);
